--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Instrument sans', sans-serif;
     background-color: #f1d0e5;
 }
 
@@ -9,9 +9,19 @@
     width: 375px;
     height: 100vh;
     margin: 0px auto;
-
 }
 
 header {
     display: flex;
+}
+
+button {
+    background-color: #f87cd1;
+    width: 100%;
+    padding: 0.5rem 1rem;
+    font-size: 2rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #6f1b36;
+    border: none;
 }
