--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body {
     /* overflow: hidden; */
     margin: 0px auto;
     padding: 16px;
-    border: 1px solid red;
     position: relative;
 }
 
@@ -57,8 +56,10 @@ body {
 .field {
     label {
         font-size: 2rem;
+        line-height: 2.5rem;
+        font-style: medium;
         display: block;
-        border: 1px solid green;
+        color: var(--primary-color);
     }
 
     input {
@@ -67,10 +68,46 @@ body {
         background-color: transparent;
         width: 100%;
         padding: 1rem 0.5rem;
+        color: #f87cd1;
+        font-size: 1.2rem;
+        font-weight: 500;
+    }
+
+    input:active {
+        color: #6f1b36;
+    }
+
+    input:focus {
+        outline: 2px solid var(--primary-color);
     }
 
     padding-bottom: 1rem;
-    border: 1px solid red;
+}
+
+/* emojii list */
+.emoji-list {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 4px;
+    margin-top: 1rem;
+
+    .emoji {
+        height: 84px;
+        font-size: 2.5rem;
+        border-radius: 8px;
+        margin-bottom: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-basis: 22%;
+        flex-wrap: wrap;
+    }
+
+    .emoji:hover {
+        background-color: #f87cd1;
+    }
 }
 
 button {
@@ -82,5 +119,6 @@ button {
     text-transform: uppercase;
     color: var(--primary-color);
     border: none;
+    border-radius: 8px;
     cursor: pointer;
 }
